--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,10 +21,15 @@ ul li{
     border: 1px solid gray;
     list-style: none;
     padding: 5px;
+    width: 100%;
 }
 h1{
-    text-align: center;
+    border: 1px solid grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 input{
-    border: none; width: 100%;
+    border: none; 
+    width: 100%;
 }
